Update to CV and contact links

--- a/index.html
+++ b/index.html
@@ -109,6 +109,12 @@
 
 
         <footer class="footer" style="text-align:center;">
+            <a class="nav-link" class="footer" href="https://github.com/SpencerFalor-Ward"
+            >github</a
+            >
+            <a class="nav-link" class="footer" href="https://www.linkedin.com/in/spencer-falor-ward-59a16494"
+            >linkedin</a
+            >
             Copyright&copy;
         </footer>
 
