--- a/portfolio.html
+++ b/portfolio.html
@@ -157,10 +157,32 @@
               />
             </div>
           </a>
+          <a href="./assets/Spencer Falor-Ward CV 2020.pdf" id="project6">
+            <div class="wrap">
+              <p>CV</p>
+              <img
+                rel="placeholder"
+                src="./assets/images/CV 2020.PNG"
+                alt="CV"
+              />
+            </div>
+          </a>
         </div>
       </section>
 
       <footer class="footer" style="text-align:center;">
+        <a
+          class="nav-link"
+          class="footer"
+          href="https://github.com/SpencerFalor-Ward"
+          >github</a
+        >
+        <a
+          class="nav-link"
+          class="footer"
+          href="https://www.linkedin.com/in/spencer-falor-ward-59a16494"
+          >linkedin</a
+        >
         Copyright&copy;
       </footer>
     </div>
